--- a/jtdl-web/src/main/webapp/home/html/register.html
+++ b/jtdl-web/src/main/webapp/home/html/register.html
@@ -146,6 +146,7 @@
 <script src="../js/jquery-2.1.4.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/register.js"></script>
-<script src="../js/md5.js"></script>
+<!--<script src="../js/md5.js"></script>-->
+<script src="../js/urlConfig.js"></script>
 </body>
 </html>
