--- a/jtdl-web/src/main/webapp/home/html/register.html
+++ b/jtdl-web/src/main/webapp/home/html/register.html
@@ -118,7 +118,7 @@
 
                             <div class="row">
 
-                                <button disabled type="submit" class="btn btn-primary btn-lg col-xs-12" id="register">注册!</button>
+                                <button disabled type="button" class="btn btn-primary btn-lg col-xs-12" id="register">注册</button>
 
                             </div>
 
