--- a/jtdl-web/src/main/webapp/home/html/register.html
+++ b/jtdl-web/src/main/webapp/home/html/register.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta name="viewport"
           content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="description" content="家庭事务管理"/>
